--- a/res/menu/lastest_menu.xml
+++ b/res/menu/lastest_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/menuItemSettings"
-          android:title="Settings"/>
-    
     <group>
 	    <item android:id="@+id/menuItemAdd"
 	          android:title="Add publisher"/>
         <item android:id="@+id/menuItemRemove"
               android:title="Remove publisher"/>
     </group>
+    <item android:id="@+id/menuItemRefresh"
+          android:title="Refresh"/>
+    
+    <item android:id="@+id/menuItemSettings"
+          android:title="Settings"/>
 </menu>
