--- a/res/menu/lastest_menu.xml
+++ b/res/menu/lastest_menu.xml
@@ -4,7 +4,7 @@
 	    <item android:id="@+id/menuItemAdd"
 	          android:title="Add publisher"/>
         <item android:id="@+id/menuItemRemove"
-              android:title="Remove publisher"/>
+              android:title="Remove publishers"/>
     </group>
     <item android:id="@+id/menuItemRefresh"
           android:title="Refresh"/>
