--- a/res/layout/latest.xml
+++ b/res/layout/latest.xml
@@ -3,22 +3,9 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+	android:id="@+id/main"
     >
     
-    <!--  Heading span -->
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="horizontal"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	>
-		<TextView  
-	    android:layout_width="fill_parent" 
-	    android:layout_height="wrap_content" 
-	    android:text="@string/latest_title"
-	    />
-			    
-	</LinearLayout>
-	
     <!-- Dynamic building of subheading views, item views and seeall views --> -->
     
 </LinearLayout>
