--- a/res/layout/subheading.xml
+++ b/res/layout/subheading.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="horizontal"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
+	android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 	>
 		<TextView  
-		    android:layout_width="fill_parent" 
+		    android:layout_width="wrap_content" 
 		    android:layout_height="wrap_content" 
 		    android:id="@+id/title"
 		    android:text="title must be set programmatically"
 		    />
 	    
 	    <TextView  
-		    android:layout_width="fill_parent" 
+		    android:layout_width="wrap_content" 
 		    android:layout_height="wrap_content" 
 		    android:id="@+id/newAmount"
 		    android:text="newAmount must be set programmatically"
 		    />
 	    
 	    <TextView  
-		    android:layout_width="fill_parent" 
+		    android:layout_width="wrap_content" 
 		    android:layout_height="wrap_content" 
 		    android:id="@+id/date"
 		    android:text="date must be set programmatically"
