--- a/res/layout/seeall.xml
+++ b/res/layout/seeall.xml
@@ -12,6 +12,7 @@ android:layout_height="fill_parent"
 	    android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content" 
 	    android:text="@string/seemore_label"
+	    android:drawableRight="@drawable/arrow"
    		/>    	
 			    
 </LinearLayout>
