--- a/res/layout/nopublishers.xml
+++ b/res/layout/nopublishers.xml
@@ -8,8 +8,8 @@
     <TextView  
 	    android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content"
-	    android:text="@string/no_feed_items"
-		android:textSize="17sp"
+	    android:text="@string/no_publishers"
+		android:textSize="32sp"
 		android:padding="14sp"
 	    />		   
 	
