--- a/res/layout/seeall.xml
+++ b/res/layout/seeall.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	  android:orientation="horizontal"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  android:background="#FFFFFF"
+	  android:paddingTop="10sp"
+      android:paddingBottom="10sp"
+	  >
 
- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="horizontal"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
->
-	
-   		<!-- Need "IconView" -->
-   	
- 		<TextView  
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/folder"
+        android:contentDescription="@string/contentDesc_folder"
+        android:padding="10dp" />   
+          
+    <TextView  
 	    android:layout_width="fill_parent" 
-	    android:layout_height="wrap_content" 
-	    android:text="@string/seemore_label"
-	    android:drawableRight="@drawable/arrow"
-   		/>    	
-			    
+	    android:layout_height="wrap_content"
+	    android:id="@+id/title"
+	    android:text="title not set"
+	    android:textSize="17sp" />
+ 
 </LinearLayout>
